# elysium-lsp

./: Cargo.toml  README.md  flake.nix
src/: compile_commands.rs  lsp.rs  main.rs
src/plugins/: clang_utils.rs  hooks.rs  init.rs  mod.rs
